--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "test": "node test.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": "git@github.com:serixapple/intro-curriculum-3007.git"
 }
